antlr3/src/main/java/alekseybykov/portfolio/parsers/antlr3/JavaParser.java
// $ANTLR 3.5.2 alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g 2023-12-24 20:54:01

	package alekseybykov.portfolio.parsers.antlr3;

	import alekseybykov.portfolio.parsers.models.JavaSource;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

/**
 * A simple grammar of the Java source text for the ANTLR 3 parser.
 */
@SuppressWarnings("all")
public class JavaParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ABSTRACT", "ASTERISK", "CLASS", 
		"COMMA", "COMMENT", "DOT", "EXTENDS", "FINAL", "IDENTIFIER", "IMPLEMENTS", 
		"IMPORT", "INTERFACE", "IdentifierPart", "IdentifierStart", "LINE_COMMENT", 
		"NATIVE", "PACKAGE", "PRIVATE", "PROTECTED", "PUBLIC", "SEMICOLON", "STATIC", 
		"STRICTFP", "SYNCHRONIZED", "TRANSIENT", "VOLATILE", "WS"
	};
	public static final int EOF=-1;
	public static final int ABSTRACT=4;
	public static final int ASTERISK=5;
	public static final int CLASS=6;
	public static final int COMMA=7;
	public static final int COMMENT=8;
	public static final int DOT=9;
	public static final int EXTENDS=10;
	public static final int FINAL=11;
	public static final int IDENTIFIER=12;
	public static final int IMPLEMENTS=13;
	public static final int IMPORT=14;
	public static final int INTERFACE=15;
	public static final int IdentifierPart=16;
	public static final int IdentifierStart=17;
	public static final int LINE_COMMENT=18;
	public static final int NATIVE=19;
	public static final int PACKAGE=20;
	public static final int PRIVATE=21;
	public static final int PROTECTED=22;
	public static final int PUBLIC=23;
	public static final int SEMICOLON=24;
	public static final int STATIC=25;
	public static final int STRICTFP=26;
	public static final int SYNCHRONIZED=27;
	public static final int TRANSIENT=28;
	public static final int VOLATILE=29;
	public static final int WS=30;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public JavaParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public JavaParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
		this.state.ruleMemo = new HashMap[56+1];


	}

	@Override public String[] getTokenNames() { return JavaParser.tokenNames; }
	@Override public String getGrammarFileName() { return "alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g"; }


		private JavaSource javaSource = new JavaSource();

		public JavaSource getJavaSource() {
			return javaSource;
		}



	// $ANTLR start "compilationUnit"
	// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:26:1: compilationUnit : ( packageDeclaration )? ( importDeclaration )* ( typeDeclaration )* ;
	public final void compilationUnit() throws RecognitionException {
		int compilationUnit_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return; }

			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:27:5: ( ( packageDeclaration )? ( importDeclaration )* ( typeDeclaration )* )
			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:27:9: ( packageDeclaration )? ( importDeclaration )* ( typeDeclaration )*
			{
			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:27:9: ( packageDeclaration )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==PACKAGE) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:27:10: packageDeclaration
					{
					pushFollow(FOLLOW_packageDeclaration_in_compilationUnit59);
					packageDeclaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}

			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:28:9: ( importDeclaration )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==IMPORT) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:28:10: importDeclaration
					{
					pushFollow(FOLLOW_importDeclaration_in_compilationUnit72);
					importDeclaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop2;
				}
			}

			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:29:9: ( typeDeclaration )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==ABSTRACT||LA3_0==CLASS||LA3_0==FINAL||LA3_0==INTERFACE||LA3_0==NATIVE||(LA3_0 >= PRIVATE && LA3_0 <= VOLATILE)) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:29:10: typeDeclaration
					{
					pushFollow(FOLLOW_typeDeclaration_in_compilationUnit85);
					typeDeclaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop3;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 1, compilationUnit_StartIndex); }

		}
	}
	// $ANTLR end "compilationUnit"



	// $ANTLR start "packageDeclaration"
	// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:32:1: packageDeclaration : packageKeyword qualifiedName SEMICOLON ;
	public final void packageDeclaration() throws RecognitionException {
		int packageDeclaration_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return; }

			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:33:5: ( packageKeyword qualifiedName SEMICOLON )
			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:33:9: packageKeyword qualifiedName SEMICOLON
			{
			pushFollow(FOLLOW_packageKeyword_in_packageDeclaration106);
			packageKeyword();
			state._fsp--;
			if (state.failed) return;
			pushFollow(FOLLOW_qualifiedName_in_packageDeclaration108);
			qualifiedName();
			state._fsp--;
			if (state.failed) return;
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_packageDeclaration118); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 2, packageDeclaration_StartIndex); }

		}
	}
	// $ANTLR end "packageDeclaration"



	// $ANTLR start "importDeclaration"
	// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:37:1: importDeclaration : ( importKeyword ( staticKeyword )? IDENTIFIER DOT ASTERISK SEMICOLON | importKeyword ( staticKeyword )? IDENTIFIER ( DOT IDENTIFIER )+ ( DOT ASTERISK )? SEMICOLON );
	public final void importDeclaration() throws RecognitionException {
		int importDeclaration_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return; }

			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:38:5: ( importKeyword ( staticKeyword )? IDENTIFIER DOT ASTERISK SEMICOLON | importKeyword ( staticKeyword )? IDENTIFIER ( DOT IDENTIFIER )+ ( DOT ASTERISK )? SEMICOLON )
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==IMPORT) ) {
				int LA8_1 = input.LA(2);
				if ( (LA8_1==STATIC) ) {
					int LA8_2 = input.LA(3);
					if ( (LA8_2==IDENTIFIER) ) {
						int LA8_3 = input.LA(4);
						if ( (LA8_3==DOT) ) {
							int LA8_4 = input.LA(5);
							if ( (LA8_4==ASTERISK) ) {
								alt8=1;
							}
							else if ( (LA8_4==IDENTIFIER) ) {
								alt8=2;
							}

							else {
								if (state.backtracking>0) {state.failed=true; return;}
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 8, 4, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

						}

						else {
							if (state.backtracking>0) {state.failed=true; return;}
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 8, 3, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 8, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA8_1==IDENTIFIER) ) {
					int LA8_3 = input.LA(3);
					if ( (LA8_3==DOT) ) {
						int LA8_4 = input.LA(4);
						if ( (LA8_4==ASTERISK) ) {
							alt8=1;
						}
						else if ( (LA8_4==IDENTIFIER) ) {
							alt8=2;
						}

						else {
							if (state.backtracking>0) {state.failed=true; return;}
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 8, 4, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 8, 3, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 8, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}

			switch (alt8) {
				case 1 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:38:9: importKeyword ( staticKeyword )? IDENTIFIER DOT ASTERISK SEMICOLON
					{
					pushFollow(FOLLOW_importKeyword_in_importDeclaration137);
					importKeyword();
					state._fsp--;
					if (state.failed) return;
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:38:23: ( staticKeyword )?
					int alt4=2;
					int LA4_0 = input.LA(1);
					if ( (LA4_0==STATIC) ) {
						alt4=1;
					}
					switch (alt4) {
						case 1 :
							// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:38:24: staticKeyword
							{
							pushFollow(FOLLOW_staticKeyword_in_importDeclaration140);
							staticKeyword();
							state._fsp--;
							if (state.failed) return;
							}
							break;

					}

					match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_importDeclaration144); if (state.failed) return;
					match(input,DOT,FOLLOW_DOT_in_importDeclaration146); if (state.failed) return;
					match(input,ASTERISK,FOLLOW_ASTERISK_in_importDeclaration148); if (state.failed) return;
					match(input,SEMICOLON,FOLLOW_SEMICOLON_in_importDeclaration150); if (state.failed) return;
					}
					break;
				case 2 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:39:9: importKeyword ( staticKeyword )? IDENTIFIER ( DOT IDENTIFIER )+ ( DOT ASTERISK )? SEMICOLON
					{
					pushFollow(FOLLOW_importKeyword_in_importDeclaration160);
					importKeyword();
					state._fsp--;
					if (state.failed) return;
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:39:23: ( staticKeyword )?
					int alt5=2;
					int LA5_0 = input.LA(1);
					if ( (LA5_0==STATIC) ) {
						alt5=1;
					}
					switch (alt5) {
						case 1 :
							// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:39:24: staticKeyword
							{
							pushFollow(FOLLOW_staticKeyword_in_importDeclaration163);
							staticKeyword();
							state._fsp--;
							if (state.failed) return;
							}
							break;

					}

					match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_importDeclaration167); if (state.failed) return;
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:39:51: ( DOT IDENTIFIER )+
					int cnt6=0;
					loop6:
					while (true) {
						int alt6=2;
						int LA6_0 = input.LA(1);
						if ( (LA6_0==DOT) ) {
							int LA6_1 = input.LA(2);
							if ( (LA6_1==IDENTIFIER) ) {
								alt6=1;
							}

						}

						switch (alt6) {
						case 1 :
							// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:39:52: DOT IDENTIFIER
							{
							match(input,DOT,FOLLOW_DOT_in_importDeclaration170); if (state.failed) return;
							match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_importDeclaration172); if (state.failed) return;
							}
							break;

						default :
							if ( cnt6 >= 1 ) break loop6;
							if (state.backtracking>0) {state.failed=true; return;}
							EarlyExitException eee = new EarlyExitException(6, input);
							throw eee;
						}
						cnt6++;
					}

					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:39:69: ( DOT ASTERISK )?
					int alt7=2;
					int LA7_0 = input.LA(1);
					if ( (LA7_0==DOT) ) {
						alt7=1;
					}
					switch (alt7) {
						case 1 :
							// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:39:70: DOT ASTERISK
							{
							match(input,DOT,FOLLOW_DOT_in_importDeclaration177); if (state.failed) return;
							match(input,ASTERISK,FOLLOW_ASTERISK_in_importDeclaration179); if (state.failed) return;
							}
							break;

					}

					match(input,SEMICOLON,FOLLOW_SEMICOLON_in_importDeclaration183); if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 3, importDeclaration_StartIndex); }

		}
	}
	// $ANTLR end "importDeclaration"



	// $ANTLR start "typeDeclaration"
	// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:42:1: typeDeclaration : ( classOrInterfaceDeclaration | SEMICOLON );
	public final void typeDeclaration() throws RecognitionException {
		int typeDeclaration_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return; }

			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:43:5: ( classOrInterfaceDeclaration | SEMICOLON )
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==ABSTRACT||LA9_0==CLASS||LA9_0==FINAL||LA9_0==INTERFACE||LA9_0==NATIVE||(LA9_0 >= PRIVATE && LA9_0 <= PUBLIC)||(LA9_0 >= STATIC && LA9_0 <= VOLATILE)) ) {
				alt9=1;
			}
			else if ( (LA9_0==SEMICOLON) ) {
				alt9=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 9, 0, input);
				throw nvae;
			}

			switch (alt9) {
				case 1 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:43:9: classOrInterfaceDeclaration
					{
					pushFollow(FOLLOW_classOrInterfaceDeclaration_in_typeDeclaration202);
					classOrInterfaceDeclaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:44:9: SEMICOLON
					{
					match(input,SEMICOLON,FOLLOW_SEMICOLON_in_typeDeclaration212); if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 4, typeDeclaration_StartIndex); }

		}
	}
	// $ANTLR end "typeDeclaration"



	// $ANTLR start "classOrInterfaceDeclaration"
	// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:47:1: classOrInterfaceDeclaration : ( classDeclaration | interfaceDeclaration );
	public final void classOrInterfaceDeclaration() throws RecognitionException {
		int classOrInterfaceDeclaration_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return; }

			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:48:5: ( classDeclaration | interfaceDeclaration )
			int alt10=2;
			alt10 = dfa10.predict(input);
			switch (alt10) {
				case 1 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:48:10: classDeclaration
					{
					pushFollow(FOLLOW_classDeclaration_in_classOrInterfaceDeclaration232);
					classDeclaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:49:9: interfaceDeclaration
					{
					pushFollow(FOLLOW_interfaceDeclaration_in_classOrInterfaceDeclaration242);
					interfaceDeclaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 5, classOrInterfaceDeclaration_StartIndex); }

		}
	}
	// $ANTLR end "classOrInterfaceDeclaration"



	// $ANTLR start "classDeclaration"
	// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:52:1: classDeclaration : accessModifier classKeyword className ( extendsKeyword superClassName )? ( implementsKeyword interfaceNameList )? ;
	public final void classDeclaration() throws RecognitionException {
		int classDeclaration_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return; }

			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:53:5: ( accessModifier classKeyword className ( extendsKeyword superClassName )? ( implementsKeyword interfaceNameList )? )
			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:53:9: accessModifier classKeyword className ( extendsKeyword superClassName )? ( implementsKeyword interfaceNameList )?
			{
			pushFollow(FOLLOW_accessModifier_in_classDeclaration261);
			accessModifier();
			state._fsp--;
			if (state.failed) return;
			pushFollow(FOLLOW_classKeyword_in_classDeclaration263);
			classKeyword();
			state._fsp--;
			if (state.failed) return;
			pushFollow(FOLLOW_className_in_classDeclaration265);
			className();
			state._fsp--;
			if (state.failed) return;
			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:54:9: ( extendsKeyword superClassName )?
			int alt11=2;
			int LA11_0 = input.LA(1);
			if ( (LA11_0==EXTENDS) ) {
				alt11=1;
			}
			switch (alt11) {
				case 1 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:54:10: extendsKeyword superClassName
					{
					pushFollow(FOLLOW_extendsKeyword_in_classDeclaration276);
					extendsKeyword();
					state._fsp--;
					if (state.failed) return;
					pushFollow(FOLLOW_superClassName_in_classDeclaration278);
					superClassName();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}

			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:55:9: ( implementsKeyword interfaceNameList )?
			int alt12=2;
			int LA12_0 = input.LA(1);
			if ( (LA12_0==IMPLEMENTS) ) {
				alt12=1;
			}
			switch (alt12) {
				case 1 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:55:10: implementsKeyword interfaceNameList
					{
					pushFollow(FOLLOW_implementsKeyword_in_classDeclaration291);
					implementsKeyword();
					state._fsp--;
					if (state.failed) return;
					pushFollow(FOLLOW_interfaceNameList_in_classDeclaration293);
					interfaceNameList();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 6, classDeclaration_StartIndex); }

		}
	}
	// $ANTLR end "classDeclaration"



	// $ANTLR start "accessModifier"
	// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:58:1: accessModifier : ( publicKeyword | protectedKeyword | privateKeyword | staticKeyword | abstractKeyword | finalKeyword | nativeKeyword | synchronizedKeyword | transientKeyword | volatileKeyword | strictfpKeyword )* ;
	public final void accessModifier() throws RecognitionException {
		int accessModifier_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return; }

			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:59:5: ( ( publicKeyword | protectedKeyword | privateKeyword | staticKeyword | abstractKeyword | finalKeyword | nativeKeyword | synchronizedKeyword | transientKeyword | volatileKeyword | strictfpKeyword )* )
			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:60:5: ( publicKeyword | protectedKeyword | privateKeyword | staticKeyword | abstractKeyword | finalKeyword | nativeKeyword | synchronizedKeyword | transientKeyword | volatileKeyword | strictfpKeyword )*
			{
			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:60:5: ( publicKeyword | protectedKeyword | privateKeyword | staticKeyword | abstractKeyword | finalKeyword | nativeKeyword | synchronizedKeyword | transientKeyword | volatileKeyword | strictfpKeyword )*
			loop13:
			while (true) {
				int alt13=12;
				switch ( input.LA(1) ) {
				case PUBLIC:
					{
					alt13=1;
					}
					break;
				case PROTECTED:
					{
					alt13=2;
					}
					break;
				case PRIVATE:
					{
					alt13=3;
					}
					break;
				case STATIC:
					{
					alt13=4;
					}
					break;
				case ABSTRACT:
					{
					alt13=5;
					}
					break;
				case FINAL:
					{
					alt13=6;
					}
					break;
				case NATIVE:
					{
					alt13=7;
					}
					break;
				case SYNCHRONIZED:
					{
					alt13=8;
					}
					break;
				case TRANSIENT:
					{
					alt13=9;
					}
					break;
				case VOLATILE:
					{
					alt13=10;
					}
					break;
				case STRICTFP:
					{
					alt13=11;
					}
					break;
				}
				switch (alt13) {
				case 1 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:60:9: publicKeyword
					{
					pushFollow(FOLLOW_publicKeyword_in_accessModifier320);
					publicKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:61:9: protectedKeyword
					{
					pushFollow(FOLLOW_protectedKeyword_in_accessModifier330);
					protectedKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 3 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:62:9: privateKeyword
					{
					pushFollow(FOLLOW_privateKeyword_in_accessModifier340);
					privateKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 4 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:63:9: staticKeyword
					{
					pushFollow(FOLLOW_staticKeyword_in_accessModifier350);
					staticKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 5 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:64:9: abstractKeyword
					{
					pushFollow(FOLLOW_abstractKeyword_in_accessModifier360);
					abstractKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 6 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:65:9: finalKeyword
					{
					pushFollow(FOLLOW_finalKeyword_in_accessModifier370);
					finalKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 7 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:66:9: nativeKeyword
					{
					pushFollow(FOLLOW_nativeKeyword_in_accessModifier380);
					nativeKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 8 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:67:9: synchronizedKeyword
					{
					pushFollow(FOLLOW_synchronizedKeyword_in_accessModifier390);
					synchronizedKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 9 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:68:9: transientKeyword
					{
					pushFollow(FOLLOW_transientKeyword_in_accessModifier400);
					transientKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 10 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:69:9: volatileKeyword
					{
					pushFollow(FOLLOW_volatileKeyword_in_accessModifier410);
					volatileKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 11 :
					// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:70:9: strictfpKeyword
					{
					pushFollow(FOLLOW_strictfpKeyword_in_accessModifier420);
					strictfpKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop13;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 7, accessModifier_StartIndex); }

		}
	}
	// $ANTLR end "accessModifier"



	// $ANTLR start "className"
	// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:74:1: className : classNameToken= IDENTIFIER ;
	public final void className() throws RecognitionException {
		int className_StartIndex = input.index();

		Token classNameToken=null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return; }

			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:75:5: (classNameToken= IDENTIFIER )
			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:75:9: classNameToken= IDENTIFIER
			{
			classNameToken=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_className450); if (state.failed) return;
			if ( state.backtracking==0 ) {
			            javaSource.setClassName(classNameToken.getText());
			        }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 8, className_StartIndex); }

		}
	}
	// $ANTLR end "className"



	// $ANTLR start "superClassName"
	// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:81:1: superClassName : parentClassNameToken= IDENTIFIER ;
	public final void superClassName() throws RecognitionException {
		int superClassName_StartIndex = input.index();

		Token parentClassNameToken=null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 9) ) { return; }

			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:82:5: (parentClassNameToken= IDENTIFIER )
			// alekseybykov\\portfolio\\parsers\\antlr3\\JavaParser.g:82:9: parentClassNameToken= IDENTIFIER
			{
			parentClassNameToken=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_superClassName483); if (state.failed) return;
			if ( state.backtracking==0 ) {
			            javaSource.setParentClassName(parentClassNameToken.getText());
			        }
			}
